# agentsurface

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: agent_client.py  ai_attacks.py  db.py  evaluator.py  llm_evaluator.py  lobster_trap.py  main.py  models.py  runner.py  test_packs.py
tests/: test_ai_attacks.py  test_attack_sets.py  test_core_mvp.py  test_llm_evaluator.py  test_streamlit_navigation.py  test_test_packs.py
ui/: streamlit_app.py
